--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "next-medium-zoom",
+  "name": "react-zoom-smooth",
   "version": "2.0.0",
-  "description": "A React component for zooming Next.js Image components",
+  "description": "A React component for smooth image zooming",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
     "next.js",
     "image",
     "zoom",
-    "react"
+    "react",
+    "animation"
   ],
   "author": "Sanyam",
   "license": "MIT",
   "peerDependencies": {
-    "next": "14.2.15",
+    "framer-motion": "^11.11.9",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/node": "^22.7.9",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15.0.1",
+    "next": "^15.0.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^4.5.0"
   },
   "repository": {
