--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "ESNext",
     "lib": ["dom", "es2015"],
     "jsx": "react",
     "declaration": true,
-    "outDir": "./dist",
+    "declarationDir": "dist",
     "strict": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "outDir": "./dist",
     "esModuleInterop": true
   },
   "include": ["src"],
